bad/bin_op_eq_bool_class.example_compiler_output
ERROR
[1mbad/bin_op_eq_bool_class.lat:5:7: [1;31merror: [0;1moperator == cannot compare values of types `boolean` and `Y` because values are not convertible to either of the two types[m
	true == new Y;
	     [1;32m^[m
